fix section distortion

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -304,7 +304,7 @@ img {
 
 .distortion-text {
   margin-top: 32px;
-  margin-bottom: 30px;
+  margin-bottom: 32px;
 }
 
 .video {
